# DataHandler

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  plan-prompts.txt  pyproject.toml  requirements.txt
config/: config.example.ini  config.ini  download_requests.json  orders.json  orders_parser.py  setup-gateway.sh
processed-data/: normalization.json
raw-data/: normalization.json
src/: config.py  data_downloader.py  file_manager.py  ibkr_client.py  normalization_tracker.py  orders_parser.py
src/configuration/: config.py  download_requests_parser.py
src/providers/: base_client.py  ibkr_client.py  saxo_client.py
