[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datahandler"
version = "0.1.0"
description = "Market data downloader using Interactive Brokers API"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Finlogics"}]
dependencies = [
    "ib_insync>=0.9.86",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.2",
    "nest_asyncio>=1.5.8",
]

[project.urls]
Repository = "https://github.com/Finlogics/DataHandler"
